basic login functionality

--- a/index.html
+++ b/index.html
@@ -15,10 +15,19 @@
         <div>
             <form>
                 <input type="text" placeholder="Search">
+
                 <input type="submit">
             </form>
         </div>
     </header>
+    <login>
+        <div style="font-size: 36px;">Login</div>
+        <form>
+            <input class="loginl" type="text" placeholder="Username">
+            <input class="loginl" type="text" placeholder="Password">
+            <input class="loginl" type="submit">
+        </form>
+    </login>
     
 </body>
 </html>
